--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.693.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -24,6 +25,7 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
     "npm": "^10.9.0",
     "path": "^0.12.7"
